# gemicro

./: .gitignore  .parallel-context.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  README.md  SECURITY.md
.cargo/: config.toml
.claude/: settings.json  settings.local.json
agents/gemicro-critique/: Cargo.toml
agents/gemicro-critique/examples/: critique_demo.rs
agents/gemicro-critique/src/: lib.rs
agents/gemicro-deep-research/: Cargo.toml
agents/gemicro-deep-research/examples/: deep_research.rs
agents/gemicro-deep-research/src/: agent.rs  config.rs  events.rs  lib.rs
agents/gemicro-deep-research/tests/: integration.rs
agents/gemicro-deep-research/tests/common/: mod.rs
agents/gemicro-developer/: CLAUDE.md  Cargo.toml
agents/gemicro-developer-agent/: CLAUDE.md  Cargo.toml
agents/gemicro-developer-agent/examples/: developer.rs  subagent_delegation.rs
agents/gemicro-developer-agent/prompts/: developer_system.md
agents/gemicro-developer-agent/src/: config.rs  lib.rs
agents/gemicro-developer-agent/tests/: integration.rs
agents/gemicro-developer-agent/tests/common/: mod.rs
agents/gemicro-developer/examples/: developer.rs  subagent_delegation.rs
agents/gemicro-developer/prompts/: developer_system.md
agents/gemicro-developer/src/: batch.rs  config.rs  context.rs  events.rs  lib.rs
agents/gemicro-developer/tests/: integration.rs
agents/gemicro-developer/tests/common/: mod.rs
agents/gemicro-echo-agent/: Cargo.toml
agents/gemicro-echo-agent/src/: lib.rs
agents/gemicro-judge/: Cargo.toml
agents/gemicro-judge/src/: lib.rs
agents/gemicro-prompt-agent/: Cargo.toml
agents/gemicro-prompt-agent/examples/: streaming_with_tools.rs  trajectory_recording.rs
agents/gemicro-prompt-agent/src/: lib.rs
agents/gemicro-prompt-agent/src/tools/: calculator.rs  datetime.rs  mod.rs
agents/gemicro-prompt-agent/tests/: integration.rs
agents/gemicro-prompt-agent/tests/common/: mod.rs
agents/gemicro-react/: Cargo.toml
agents/gemicro-react-agent/: Cargo.toml
agents/gemicro-react-agent/examples/: react.rs
agents/gemicro-react-agent/src/: agent.rs  config.rs  lib.rs
agents/gemicro-react-agent/tests/: integration.rs
agents/gemicro-react-agent/tests/common/: mod.rs
agents/gemicro-react/examples/: react.rs
agents/gemicro-react/src/: agent.rs  config.rs  lib.rs
agents/gemicro-react/tests/: integration.rs
agents/gemicro-react/tests/common/: mod.rs
agents/gemicro-simple-qa/: Cargo.toml
agents/gemicro-simple-qa/examples/: trajectory_recording.rs
agents/gemicro-simple-qa/src/: lib.rs
agents/gemicro-simple-qa/tests/: integration.rs
agents/gemicro-tool-agent/: Cargo.toml
agents/gemicro-tool-agent/examples/: streaming_tool_agent.rs
agents/gemicro-tool-agent/src/: lib.rs
agents/gemicro-tool-agent/src/tools/: calculator.rs  datetime.rs  mod.rs
agents/gemicro-tool-agent/tests/: integration.rs
agents/gemicro-tool-agent/tests/common/: mod.rs
docs/: AGENT_AUTHORING.md  ARCHITECTURE.md  AVAILABLE_TOOLS.md  HOOK_AUTHORING.md  INTERCEPTOR_AUTHORING.md  TOOL_AUTHORING.md  (+1 more)
gemicro-cli/: Cargo.toml
gemicro-cli/examples/: multi_turn.rs  sandbox_usage.rs
gemicro-cli/src/: cli.rs  confirmation.rs  error.rs  format.rs  lib.rs  main.rs  registry.rs  state_handlers.rs
gemicro-cli/src/config/: loader.rs  markdown_agents.rs  mod.rs  types.rs
gemicro-cli/src/display/: indicatif.rs  mod.rs  renderer.rs  state.rs
gemicro-cli/src/repl/: commands.rs  mod.rs  registry.rs  session.rs
gemicro-cli/tests/: cli_integration.rs
gemicro-cli/tests/common/: mod.rs
gemicro-core/: Cargo.toml
gemicro-core/examples/: deep_research.rs  react.rs
gemicro-core/src/: agent.rs  config.rs  context.rs  error.rs  history.rs  lib.rs  llm.rs  mock_llm.rs  tracking.rs  trajectory.rs  update.rs  utils.rs
gemicro-core/src/agent/: deep_research.rs  ephemeral.rs  execution.rs  mod.rs  orchestration.rs  react.rs  simple_qa.rs  subagent.rs  tool_agent.rs
gemicro-core/src/coordination/: error.rs  hub.rs  mod.rs
gemicro-core/src/interceptor/: mod.rs  types.rs
gemicro-core/src/llm/: client.rs  mod.rs  request.rs
gemicro-core/src/tool/: adapter.rs  batch.rs  example_hooks.rs  hooks.rs  mod.rs  registry.rs  service.rs
gemicro-core/src/trajectory/: builder.rs  data.rs  mod.rs
gemicro-core/tests/: agent_integration.rs  hook_integration.rs  interceptor_integration.rs  llm_integration.rs  react_integration.rs  simple_qa_integration.rs  tool_agent_integration.rs
gemicro-core/tests/common/: mod.rs
gemicro-eval/: Cargo.toml
gemicro-eval/examples/: ab_comparison.rs
gemicro-eval/src/: dataset.rs  harness.rs  judge.rs  lib.rs  results.rs  scorer.rs
gemicro-eval/tests/: critique_integration.rs  harness_integration.rs  judge_integration.rs  scorer_integration.rs
gemicro-loader/: Cargo.toml
gemicro-loader/src/: lib.rs  markdown.rs
gemicro-runner/: Cargo.toml
gemicro-runner/src/: lib.rs  metrics.rs  registry.rs  runner.rs  state.rs  utils.rs
gemicro-streaming-events/: Cargo.toml
gemicro-streaming-events/src/: lib.rs
hooks/gemicro-audit-log/: Cargo.toml
hooks/gemicro-audit-log/src/: lib.rs
hooks/gemicro-conditional-permission/: Cargo.toml
hooks/gemicro-conditional-permission/src/: lib.rs
hooks/gemicro-file-security/: Cargo.toml
hooks/gemicro-file-security/src/: lib.rs
hooks/gemicro-input-sanitizer/: Cargo.toml
hooks/gemicro-input-sanitizer/src/: lib.rs
hooks/gemicro-metrics/: Cargo.toml
hooks/gemicro-metrics/src/: lib.rs
hooks/gemicro-path-sandbox/: Cargo.toml
hooks/gemicro-path-sandbox/examples/: sandboxed_tools.rs
hooks/gemicro-path-sandbox/src/: lib.rs
tools/gemicro-bash/: Cargo.toml
tools/gemicro-bash/src/: lib.rs
tools/gemicro-event-bus/: Cargo.toml
tools/gemicro-event-bus/src/: client.rs  error.rs  lib.rs
tools/gemicro-file-edit/: Cargo.toml
tools/gemicro-file-edit/src/: lib.rs
tools/gemicro-file-read/: Cargo.toml
tools/gemicro-file-read/src/: lib.rs
tools/gemicro-file-write/: Cargo.toml
tools/gemicro-file-write/src/: lib.rs
tools/gemicro-glob/: Cargo.toml
tools/gemicro-glob/src/: lib.rs
(+29 files in other folders)
