[workspace]
members = [
    "gemicro-core",
    "gemicro-runner",
    "gemicro-cli",
    "gemicro-eval",
    "agents/gemicro-deep-research",
    "agents/gemicro-react",
    "agents/gemicro-simple-qa",
    "agents/gemicro-tool-agent",
    "agents/gemicro-judge",
    "tools/gemicro-file-read",
    "tools/gemicro-web-fetch",
    "tools/gemicro-task",
    "tools/gemicro-web-search",
    "tools/gemicro-glob",
    "tools/gemicro-grep",
    "tools/gemicro-file-write",
    "tools/gemicro-file-edit",
    "tools/gemicro-bash",
    "tools/gemicro-event-bus",
    "hooks/gemicro-audit-log",
    "hooks/gemicro-file-security",
    "hooks/gemicro-input-sanitizer",
    "hooks/gemicro-conditional-permission",
    "hooks/gemicro-metrics",
]
resolver = "2"

[workspace.dependencies]
rust-genai = { git = "https://github.com/evansenter/rust-genai", branch = "main" }
rust-genai-macros = { git = "https://github.com/evansenter/rust-genai", branch = "main" }
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
async-trait = "0.1"
async-stream = "0.3"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
anyhow = "1.0"
log = "0.4"
indicatif = "0.18"
termimad = "0.34"
rustyline = "17.0"
rstest = "0.26"
tempfile = "3.24"
toml = "0.8"
dirs = "6.0"
uuid = { version = "1.11", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
glob = "0.3"
regex = "1.11"
eventsource-client = "0.15"
chrono = "0.4"

# Workspace-level metadata
[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/evansenter/gemicro"
