[package]
name = "gemicro-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for gemicro AI agent exploration platform"

[[bin]]
name = "gemicro"
path = "src/main.rs"

[dependencies]
gemicro-core = { path = "../gemicro-core" }
gemicro-runner = { path = "../gemicro-runner" }
rust-genai = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Display
indicatif = "0.18"
termimad = "0.34"

# REPL
rustyline = "17.0"

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# For tests
serde_json = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
