[package]
name = "gemicro-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for gemicro AI agent exploration platform"

[[bin]]
name = "gemicro"
path = "src/main.rs"

[dependencies]
gemicro-core = { path = "../gemicro-core" }
gemicro-runner = { path = "../gemicro-runner" }

# Agent crates - CLI needs all agents it uses
gemicro-critique = { path = "../agents/gemicro-critique" }
gemicro-deep-research = { path = "../agents/gemicro-deep-research" }
gemicro-developer = { path = "../agents/gemicro-developer" }
gemicro-echo = { path = "../agents/gemicro-echo" }
gemicro-react = { path = "../agents/gemicro-react" }
gemicro-prompt-agent = { path = "../agents/gemicro-prompt-agent" }

# Tool crates - CLI needs these for explicit tool registration
gemicro-file-read = { path = "../tools/gemicro-file-read" }
gemicro-web-fetch = { path = "../tools/gemicro-web-fetch" }
gemicro-glob = { path = "../tools/gemicro-glob" }
gemicro-grep = { path = "../tools/gemicro-grep" }
gemicro-web-search = { path = "../tools/gemicro-web-search" }
gemicro-file-write = { path = "../tools/gemicro-file-write" }
gemicro-file-edit = { path = "../tools/gemicro-file-edit" }
gemicro-bash = { path = "../tools/gemicro-bash" }

# Tool crates - CLI needs Task tool for subagent access
gemicro-task = { path = "../tools/gemicro-task" }

# Hook crates - CLI needs PathSandbox for --sandbox-path support
gemicro-path-sandbox = { path = "../hooks/gemicro-path-sandbox" }
rust-genai = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Display
indicatif = { workspace = true }
termimad = { workspace = true }

# REPL
rustyline = { workspace = true }
dialoguer = "0.11"
async-trait = { workspace = true }

# Error handling
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Config
dirs = { workspace = true }

[dev-dependencies]
async-stream = { workspace = true }
serial_test = "3.2"
tempfile = { workspace = true }
