[package]
name = "gemicro-core"
version = "0.1.0"
edition = "2021"

[[example]]
name = "deep_research"
path = "examples/deep_research.rs"

[dependencies]
rust-genai = { workspace = true }
rust-genai-macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
meval = "0.2"

[dev-dependencies]
rstest = { workspace = true }
