[package]
name = "gemicro-core"
version = "0.1.0"
edition = "2021"
description = "Core library for gemicro AI agent exploration platform"

[dependencies]
rust-genai = { workspace = true }
rust-genai-macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
meval = "0.2"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
# Agent crates needed for integration tests
gemicro-deep-research = { path = "../agents/gemicro-deep-research" }
gemicro-react = { path = "../agents/gemicro-react" }
gemicro-simple-qa = { path = "../agents/gemicro-simple-qa" }
gemicro-tool-agent = { path = "../agents/gemicro-tool-agent" }
