[package]
name = "gemicro-core"
version = "0.1.0"
edition = "2021"
description = "Core library for gemicro AI agent exploration platform"

[dependencies]
gemicro-streaming-events = { path = "../gemicro-streaming-events" }
genai-rs = { workspace = true }
genai-rs-macros = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-trait = { workspace = true }
async-stream = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
eventsource-client = { workspace = true }
chrono = { workspace = true }
meval = "0.2"

[dev-dependencies]
rstest = { workspace = true }
tempfile = { workspace = true }
# Agent crates needed for integration tests
gemicro-deep-research-agent = { path = "../agents/gemicro-deep-research-agent" }
gemicro-react-agent = { path = "../agents/gemicro-react-agent" }
gemicro-prompt-agent = { path = "../agents/gemicro-prompt-agent" }
# Hook crates needed for integration tests
gemicro-audit-log = { path = "../hooks/gemicro-audit-log" }
gemicro-file-security = { path = "../hooks/gemicro-file-security" }
gemicro-input-sanitizer = { path = "../hooks/gemicro-input-sanitizer" }
gemicro-metrics = { path = "../hooks/gemicro-metrics" }
