[package]
name = "gemicro-eval"
version = "0.1.0"
edition = "2021"
description = "Evaluation framework for benchmarking gemicro agents against datasets"

[[bin]]
name = "gemicro-eval"
path = "src/bin/main.rs"

[dependencies]
gemicro-core = { path = "../gemicro-core" }
gemicro-runner = { path = "../gemicro-runner" }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
async-stream = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6.0"
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = "0.18"
rust-genai = { workspace = true }
env_logger = "0.11"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
rust-genai = { workspace = true }
tempfile = "3.24"
env_logger = "0.11"
rstest = "0.26"
