[package]
name = "gemicro-eval"
version = "0.1.0"
edition = "2021"
description = "Evaluation framework for benchmarking gemicro agents against datasets"

[[bin]]
name = "gemicro-eval"
path = "src/bin/main.rs"

[dependencies]
gemicro-core = { path = "../gemicro-core" }
gemicro-runner = { path = "../gemicro-runner" }

# Agent crates - eval needs these for the CLI and scoring
gemicro-deep-research = { path = "../agents/gemicro-deep-research" }
gemicro-react = { path = "../agents/gemicro-react" }
gemicro-simple-qa = { path = "../agents/gemicro-simple-qa" }
gemicro-tool-agent = { path = "../agents/gemicro-tool-agent" }
gemicro-critique = { path = "../agents/gemicro-critique" }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
async-stream = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6.0"
clap = { version = "4.5", features = ["derive", "env"] }
indicatif = { workspace = true }
rust-genai = { workspace = true }
env_logger = "0.11"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
rust-genai = { workspace = true }
tempfile = { workspace = true }
env_logger = "0.11"
rstest = { workspace = true }
