[package]
name = "gemicro-streaming-events"
version = "0.1.0"
edition = "2021"
description = "Minimal streaming event types for gemicro AI agent platform"
license = "MIT"
repository = "https://github.com/evansenter/gemicro"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
