[package]
name = "gemicro-critique"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Critique agent: generalized output validation and feedback"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rust-genai = { workspace = true }
env_logger = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
