[package]
name = "gemicro-deep-research"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deep Research agent: query decomposition, parallel sub-query execution, synthesis"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
rust-genai = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[[example]]
name = "deep_research"
path = "examples/deep_research.rs"

[dev-dependencies]
rstest = { workspace = true }
rust-genai = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }
