[package]
name = "gemicro-developer-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Developer agent with explicit function calling for real-time tool events"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
genai-rs = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
gemicro-bash = { path = "../../tools/gemicro-bash" }
gemicro-critique-agent = { path = "../gemicro-critique-agent" }
gemicro-deep-research-agent = { path = "../gemicro-deep-research-agent" }
gemicro-file-read = { path = "../../tools/gemicro-file-read" }
gemicro-glob = { path = "../../tools/gemicro-glob" }
gemicro-grep = { path = "../../tools/gemicro-grep" }
gemicro-runner = { path = "../../gemicro-runner" }
gemicro-task = { path = "../../tools/gemicro-task" }
gemicro-prompt-agent = { path = "../gemicro-prompt-agent" }
tokio-util = { workspace = true }
textwrap = "0.16"
async-trait = { workspace = true }
