[package]
name = "gemicro-developer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Developer agent with explicit function calling for real-time tool events"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
rust-genai = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
gemicro-file-read = { path = "../../tools/gemicro-file-read" }
gemicro-glob = { path = "../../tools/gemicro-glob" }
tokio-util = { workspace = true }
