[package]
name = "gemicro-developer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Developer agent with explicit function calling for real-time tool events"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
rust-genai = { workspace = true }
tokio = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
gemicro-file-read = { path = "../../tools/gemicro-file-read" }
gemicro-glob = { path = "../../tools/gemicro-glob" }
gemicro-grep = { path = "../../tools/gemicro-grep" }
gemicro-bash = { path = "../../tools/gemicro-bash" }
gemicro-task = { path = "../../tools/gemicro-task" }
gemicro-runner = { path = "../../gemicro-runner" }
gemicro-deep-research = { path = "../gemicro-deep-research" }
gemicro-tool-agent = { path = "../gemicro-tool-agent" }
tokio-util = { workspace = true }
textwrap = "0.16"
async-trait = { workspace = true }
