[package]
name = "gemicro-echo-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Echo agent: minimal no-LLM agent for CLI integration testing"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
async-stream = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
futures-util = { workspace = true }
genai-rs = { workspace = true }
