[package]
name = "gemicro-judge"
version = "0.1.0"
edition = "2021"
description = "LLM Judge agent: LLM-based evaluation scoring"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
rust-genai = { workspace = true }
