[package]
name = "gemicro-react"
version = "0.1.0"
edition = "2021"
description = "ReAct agent: Thought → Action → Observation reasoning loops"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
meval = "0.2"

[[example]]
name = "react"
path = "examples/react.rs"

[dev-dependencies]
rstest = { workspace = true }
rust-genai = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
futures-util = { workspace = true }
