[package]
name = "gemicro-tool-agent"
version.workspace = true
edition.workspace = true
description = "Tool agent: native function calling with calculator/datetime tools"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
gemicro-runner = { path = "../../gemicro-runner" }
gemicro-file-read = { path = "../../tools/gemicro-file-read" }
gemicro-web-fetch = { path = "../../tools/gemicro-web-fetch" }
gemicro-task = { path = "../../tools/gemicro-task" }
gemicro-web-search = { path = "../../tools/gemicro-web-search" }
gemicro-glob = { path = "../../tools/gemicro-glob" }
gemicro-grep = { path = "../../tools/gemicro-grep" }
gemicro-file-write = { path = "../../tools/gemicro-file-write" }
gemicro-file-edit = { path = "../../tools/gemicro-file-edit" }
gemicro-bash = { path = "../../tools/gemicro-bash" }
rust-genai = { workspace = true }
rust-genai-macros = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
async-stream = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
meval = "0.2"
chrono = "0.4"

[dev-dependencies]
rstest = { workspace = true }
rust-genai = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
futures-util = { workspace = true }
gemicro-audit-log = { path = "../../hooks/gemicro-audit-log" }
env_logger = "0.11"
