[package]
name = "gemicro-metrics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

description = "Metrics collection hook for gemicro tool execution tracking"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
async-trait.workspace = true
serde_json.workspace = true
log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
