[package]
name = "gemicro-bash"
version = "0.1.0"
edition = "2021"
description = "Bash tool for executing shell commands"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["process"] }
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros", "process"] }
