[package]
name = "gemicro-event-bus"
version.workspace = true
edition.workspace = true
description = "EventBus tool for agent coordination via claude-event-bus"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
async-trait.workspace = true
serde = { workspace = true }
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
