[package]
name = "gemicro-file-edit"
version.workspace = true
edition.workspace = true
description = "FileEdit tool for editing existing files"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs"] }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "fs"] }
