[package]
name = "gemicro-file-write"
version = "0.1.0"
edition = "2021"
description = "FileWrite tool for writing file contents"

[dependencies]
gemicro-core = { path = "../../gemicro-core" }
async-trait.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["fs"] }
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros", "fs"] }
